@@ -18,12 +18,6 @@
 #ifndef RcppEnsmallen__RcppEnsmallen__h
 #define RcppEnsmallen__RcppEnsmallen__h
 
-#ifdef RCPPENSMALLEN_HEADER_CHECK
-  #if defined(Rcpp_hpp) && defined(RcppArmadillo__RcppArmadillo__h)
-    #error "Do not include either 'Rcpp.h' or 'RcppArmadillo.h'. Please only use 'RcppEnsmallen.h'."
-  #endif
-#endif
-
 // Enable RcppArmadillo and Rcpp
 #include <RcppArmadillo.h>
 
